--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,73 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.addTask{
+   background-color: rgb(85, 67, 67);
+   padding: 40px 1%;
+}
+.inp{
+  outline: none;
+  border: none;
+  width: 40%;
+  height: 40px;
+  border-radius: 8px 0px 0px 8px;
+}
+.btn-primary{
+  width: 100px;
+  background-color: bisque;
+  border: none;
+  border-radius: 0px 8px 8px 0px;
+  height: 42px;
+}
+.btn-danger{
+  width: 40px;
+  background-color: rgb(250, 126, 126);
+  border: none;
+  margin-top: 4px;
+  border-radius: 100px;
+  height: 40px;
+}
+.btn-success{
+  width: 40px;
+  margin-right: 4px;
+  background-color: rgb(111, 239, 109);
+  border: none;
+  border-radius: 100px;
+  height: 40px;
+}
+.list{
+
+  font-size: 1em;
+  font-weight: lighter;
+  font-family: sans-serif;
+  margin: 9px 8px;
+
+  /* padding: 2% 1%; */
+}
+.tsk{
+  display: flex;
+  justify-content: space-between;
+  padding: 2% 1%;
+  margin-top: 20px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.btn-g{
+  display: flex;
+  flex-direction: column;
+}
+.btn-g button{
+  display: block;
+}
+.foter{
+  margin-top: 90vh;
+  background-color: rgb(85, 67, 67);
+  padding: .5% 1%;
+  color: white;
+}
+a{
+  color: white;
+  text-decoration: none;
+}
